Tests/context/invalid/class22.java
class A extends B{
    B b = new B();

}

class B extends A{
    A a = new A();
}